--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
 
     <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="/src/main.js">
+      
+    </script>
   </body>
 </html>
